# cabal2nix-question

./: flake.nix
my-haskell-project/: my-haskell-project.cabal
