cabal-version:      3.0
name:               my-haskell-project
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable my-haskell-project
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        my-haskell-project

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite my-haskell-project-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        my-haskell-project
